style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins');

* {
  font-family: 'Poppins';
}

html,
body {
  height: 100vh;
  width: 100vw;
  margin: 0;
  padding: 0;
  border: 0;
}

body {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: #fcfbfb;
}

.item {
  /* border: 2px dashed gray; */
  min-width: 15%;
  border-radius: 4px;
  padding: 2%;
  margin: 1rem 0 0 1rem;
  background-color: #29e;
  font-size: 1.2em;
  touch-action: none;
  position: absolute;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.buttons {
  width: 100%;
  display: flex;
  justify-content: space-around;
}

#add-button {
  border: 0;
  background-color: #22ee66;
  color: #fff;
  font-size: 1.1em;
  padding: 1%;
  border-radius: 4px;
  margin: 15px 0;
  cursor: pointer;
}

#remove-all-button {
  border: 0;
  background-color: #ee2222;
  color: #fff;
  font-size: 1.1em;
  padding: 1%;
  border-radius: 4px;
  margin: 15px 0;
  cursor: pointer;
}

#grid {
  background-color: #c2e1f8;
  height: 100%;
  width: 100%;
  border-top: 2px dashed #808080;
}

.itemButtons {
  display: flex;
  align-items: center;
}

.removeButton {
  padding: 0;
  border: 0;
  color: #ff0000;
  background-color: transparent;
  font-size: 2rem;
  cursor: pointer;
  transition: .2s;
}

.removeButton:hover {
  color: #c00000;
}

.editButton {
  padding: 0;
  border: 0;
  color: #eeff00;
  background-color: transparent;
  font-size: 1rem;
  cursor: pointer;
  transition: .2s;
}

.editButton:hover {
  color: #c0bd00;
}

.insideText {
  min-width: 15ch;
  font-family: monospace;
  background-color: transparent;
  border: 0;
  resize: none;
  font-size: 1rem;
  color: #fff;
  outline: 0;
  margin-right: .4rem;
}

.lines {
  font-size: 1.5rem;
  position: absolute;
  cursor: pointer;
  color: transparent;
  transition: .2s;
}

.lines-focus {
  color: #000000;
}

.lines:hover {
  color: #808080;
}

.lines-left {
  left: -5%;
}

.lines-right {
  right: -5%;
}

